--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,7 +127,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   qr_flutter: ^4.0.0
-  qr_code_scanner: ^1.0.1
+  mobile_scanner: ^3.2.0
 
 
 dev_dependencies:
